style: refine claude-inspired dark theme

--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
             transform: translateY(-2px);
         }
     </style>
+    <link rel="stylesheet" href="claude-theme.css">
 </head>
-<body>
+<body class="claude">
     <div class="container">
         <!-- Header -->
         <div class="header">
